--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ a:visited{
     justify-content: space-around;
   }
   /*Requirement 18*/
-  .price{
+  .pricing{
     align-items: flex-end;
   }
   /*Requirement 19*/
